--- a/src/main/java/com/company/bonsai/gui/TaskManagerForm.form
+++ b/src/main/java/com/company/bonsai/gui/TaskManagerForm.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="314" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="1200" height="900"/>
+    </properties>
     <border type="none"/>
     <children>
       <toolbar id="3ae43">
@@ -23,6 +25,18 @@
               <text value="Run task"/>
             </properties>
           </component>
+          <component id="74265" class="javax.swing.JButton" binding="addTaskButton">
+            <constraints/>
+            <properties>
+              <text value="Add Task"/>
+            </properties>
+          </component>
+          <component id="fb2b8" class="javax.swing.JButton" binding="removeTaskButton">
+            <constraints/>
+            <properties>
+              <text value="Remove Task"/>
+            </properties>
+          </component>
         </children>
       </toolbar>
       <splitpane id="7e7be">
@@ -38,12 +52,16 @@
             <constraints>
               <splitpane position="left"/>
             </constraints>
-            <properties/>
+            <properties>
+              <preferredSize width="300" height="360"/>
+            </properties>
             <border type="none"/>
             <children>
-              <component id="8f353" class="javax.swing.JTree" binding="taskTreeWidget" custom-create="true">
+              <component id="8f353" class="javax.swing.JTree" binding="taskTreeWidget">
                 <constraints/>
-                <properties/>
+                <properties>
+                  <preferredSize width="-1" height="-1"/>
+                </properties>
               </component>
             </children>
           </scrollpane>
