--- a/bonsai-desktop/src/main/java/com/company/bonsai/gui/taskmanager/TaskManagerForm.form
+++ b/bonsai-desktop/src/main/java/com/company/bonsai/gui/taskmanager/TaskManagerForm.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.company.bonsai.gui.TaskManagerForm">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.company.bonsai.gui.taskmanager.TaskManagerForm">
   <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -19,12 +19,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="71795" class="javax.swing.JButton" binding="runTaskButton" default-binding="true">
-            <constraints/>
-            <properties>
-              <text value="Run task"/>
-            </properties>
-          </component>
           <component id="74265" class="javax.swing.JButton" binding="addTaskButton">
             <constraints/>
             <properties>
@@ -35,6 +29,12 @@
             <constraints/>
             <properties>
               <text value="Remove Task"/>
+            </properties>
+          </component>
+          <component id="71795" class="javax.swing.JButton" binding="runTaskButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <text value="Run task"/>
             </properties>
           </component>
         </children>
