--- a/bonsai-desktopUI/src/main/java/com/company/bonsai/ui/task/manager/TaskManagerForm.form
+++ b/bonsai-desktopUI/src/main/java/com/company/bonsai/ui/task/manager/TaskManagerForm.form
@@ -31,6 +31,12 @@
               <text value="Remove Task"/>
             </properties>
           </component>
+          <component id="46361" class="javax.swing.JButton" binding="configTaskButton">
+            <constraints/>
+            <properties>
+              <text value="Config"/>
+            </properties>
+          </component>
           <component id="71795" class="javax.swing.JButton" binding="runTaskButton" default-binding="true">
             <constraints/>
             <properties>
