--- a/bonsai-desktopUI/src/main/java/com/company/bonsai/ui/task/configurator/TaskConfiguratorDialog.form
+++ b/bonsai-desktopUI/src/main/java/com/company/bonsai/ui/task/configurator/TaskConfiguratorDialog.form
@@ -59,7 +59,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <tabbedpane id="a16ec" binding="tabbedPane1" default-binding="true">
+          <tabbedpane id="a16ec" binding="tabPanel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="200" height="200"/>
